fix: add more spacing between category heading and projects

--- a/app/assets/styles/modules/page-modules/portfolio/_project.scss
+++ b/app/assets/styles/modules/page-modules/portfolio/_project.scss
@@ -136,14 +136,17 @@
 		max-height: 400px;
 		overflow: hidden;
 		margin-bottom: 3rem;
+		transition: max-height 0.2s ease-in-out;
 
 		&--hidden {
 			max-height: 400px;
-			animation: 2s ease-in-out both slidein;
 		}
 		&--revealed {
 			max-height: 100%;
-			animation: 2s ease-in-out both slidein;
+		}
+
+		&:last-of-type {
+			margin-bottom: 8rem;
 		}
 
 		&__shade {
@@ -155,8 +158,8 @@
 			justify-content: center;
 			align-items: center;
 			height: 50%;
-			background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, $primaryBlueShade2 100%);
-			backdrop-filter: blur(0.5px);
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $primaryBlueShade2 100%);
+			backdrop-filter: blur(0.25px);
 
 			&--hidden {
 				display: none;
@@ -173,7 +176,7 @@
 }
 
 .project-category {
-	margin-top: 2rem;
+	margin-top: 4rem;
 
 	h2 {
 		margin: 0;
